# physics

./: .gitignore  CMakeLists.txt  README.md  test.cpp  vector3.cpp
src/: PhysicsConfig.hpp.in  collider.cpp  collider.hpp  collidertype.hpp  cuboidcollider.cpp  cuboidcollider.hpp  exception.hpp  line.cpp  line.hpp  notimplementedexception.cpp  notimplementedexception.hpp  rectangle.cpp  rectangle.hpp  spherecollider.cpp  spherecollider.hpp  vector3.cpp  vector3.hpp
